Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-117961
tst_itemmodeltest: Labels are not drawn at the beginning
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P2: Important
Fix Version/s:
6.7.0 FF
Affects Version/s:
6.7.0
Component/s:
Graphs: 3D
Labels:
None
Commits:
60c435222 (dev)
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Dilek Akcay
Reporter:
Dilek Akcay
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
10 Oct '23 07:53
Updated:
11 Oct '23 11:29
Resolved:
11 Oct '23 11:29
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Draw labels even if the graph is initially viewed from behind
Gerrit Review: