Draw labels even if the graph is initially viewed from behind

It was observed that in some graphs, x and z labels were not drawn at the beginning. Using eulerRotation instead of rotation to reach the rotation value of the x axis while checking whether we are looking at the graph from below (m_yFlipped variable) solves the problem.

Fixes: QTBUG-117961
Change-Id: Ifc8983707427bd2d8580eb846c2d6d47478dba35
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>